# audaki-u8string

./: .gitignore  CMakeLists.txt  README.md
include/audaki/: u8string.h
src/audaki/: u8string.cpp
test/: CMakeLists.txt  main.cpp
